@@ -1,0 +1,4 @@
+bin/
+libs/
+obj/
+gen/
