@@ -1,0 +1,6 @@
+/** Automatically generated file. DO NOT MODIFY */
+package com.razvanmcrafter.addon.emeraldmod;
+
+public final class BuildConfig {
+    public final static boolean DEBUG = false;
+}
