@@ -1,0 +1,59 @@
+/* AUTO-GENERATED FILE.  DO NOT MODIFY.
+ *
+ * This class was automatically generated by the
+ * aapt tool from the resource data it found.  It
+ * should not be modified by hand.
+ */
+
+package com.razvanmcrafter.addon.emeraldmod;
+
+public final class R {
+    public static final class attr {
+    }
+    public static final class color {
+        public static final int colorPrimary=0x7f040000;
+        public static final int colorPrimaryDark=0x7f040001;
+        public static final int colorRed=0x7f040002;
+    }
+    public static final class dimen {
+        /**  Default screen margins, per the Android Design guidelines. 
+         */
+        public static final int activity_horizontal_margin=0x7f050000;
+        public static final int activity_vertical_margin=0x7f050001;
+    }
+    public static final class id {
+        public static final int checkTwitter=0x7f090005;
+        public static final int community=0x7f090007;
+        public static final int downloadBLBtn=0x7f090004;
+        public static final int hideBtn=0x7f090001;
+        public static final int hideTxt=0x7f090003;
+        public static final int rate=0x7f090006;
+        public static final int stepOneTxt=0x7f090000;
+        public static final int stepTwoTxt=0x7f090002;
+    }
+    public static final class layout {
+        public static final int activity_main=0x7f030000;
+    }
+    public static final class menu {
+        public static final int menu_main=0x7f080000;
+    }
+    public static final class mipmap {
+        public static final int icon=0x7f020000;
+    }
+    public static final class string {
+        public static final int app_hide=0x7f060001;
+        public static final int app_hide_desc=0x7f060003;
+        public static final int app_name=0x7f060000;
+        public static final int check_twitter=0x7f060008;
+        public static final int community=0x7f060009;
+        public static final int download_bl=0x7f060002;
+        public static final int get_donate=0x7f06000a;
+        public static final int rate=0x7f060007;
+        public static final int step_one=0x7f060004;
+        public static final int step_three=0x7f060006;
+        public static final int step_two=0x7f060005;
+    }
+    public static final class style {
+        public static final int AppTheme=0x7f070000;
+    }
+}
