@@ -1,5 +1,8 @@
 #include "EmeraldDoorItem.h"
+#include "mcpe/world/material/Material.h"
+#include "mcpe/CreativeItemCategory.h"
 
-EmeraldDoorItem::EmeraldDoorItem(short itemId, Material& material) : DoorItem("emeraldDoor", itemId, material, DoorBlock::DoorType(0)){
+EmeraldDoorItem::EmeraldDoorItem(short itemId) : DoorItem("emeraldDoor", itemId, Material::getMaterial(MaterialType::METAL), DoorBlock::DoorType(0)){
 	setMaxStackSize(16);
+	creativeCategory = CreativeItemCategory::DECORATIONS;
 }
