@@ -1,12 +1,11 @@
 #pragma once
 
 #include "mcpe/world/item/DoorItem.h"
-#include "mcpe/world/material/Material.h"
 
 class EmeraldDoorItem : public DoorItem
 {
 public:
-	EmeraldDoorItem(short itemId, Material& material);
+	EmeraldDoorItem(short itemId);
 	
 public:
 	EmeraldDoorItem(std::string);
